link color change

--- a/index.html
+++ b/index.html
@@ -50,19 +50,19 @@
 			<div class="col-md-4">
 			<img class="img-responsive featured-image rounded-corners" src="img/flashcards.jpg">
 			<h2>Flashcard app</h2>
-			<p><a href="http://renniesb.github.io/languagesite/Flashcards.html">http://renniesb.github.io/languagesite/Flashcards.html</a></p>
+			<p><a class="link" href="http://renniesb.github.io/languagesite/Flashcards.html">http://renniesb.github.io/languagesite/Flashcards.html</a></p>
 			</div>
 
 			<div class="col-md-4">
 			<img class="img-responsive featured-image rounded-corners" src="img/drag-and-drop.jpg">
 			<h2>Drag and Drop App</h2>
-			<p><a href="http://renniesb.github.io/languagesite/materialsDragAndDrop/draganddrop.html">http://renniesb.github.io/languagesite/materialsDragAndDrop/draganddrop.html</a></p>
+			<p><a class="link" href="http://renniesb.github.io/languagesite/materialsDragAndDrop/draganddrop.html">http://renniesb.github.io/languagesite/materialsDragAndDrop/draganddrop.html</a></p>
 			</div>
 
 			<div class="col-md-4">
 			<img class="img-responsive featured-image" src="img/science.jpg">
 			<h2>Science Blog</h2>
-			<p><a href="http://sciencesanjosesg.blogspot.com.es/">http://sciencesanjosesg.blogspot.com.es/</a></p>
+			<p><a class="link" href="http://sciencesanjosesg.blogspot.com.es/">http://sciencesanjosesg.blogspot.com.es/</a></p>
 			</div>
 
 		</div>
