--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 <head>
+	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -42,7 +43,7 @@
 		<div class="row">
 			
 			<div class="col-md-12">
-				<h2>Featured Work</h2>
+				<h2 class="subtitle1">Featured Work</h2>
 			</div>
 		</div>
 
@@ -60,7 +61,7 @@
 			</div>
 
 			<div class="col-md-4">
-			<img class="img-responsive featured-image" src="img/science.jpg" alt="science blog image">
+			<img class="img-responsive featured-image rounded-corners" src="img/science.jpg" alt="science blog image">
 			<h2>Science Blog</h2>
 			<p><a class="link" href="http://sciencesanjosesg.blogspot.com.es/">http://sciencesanjosesg.blogspot.com.es/</a></p>
 			</div>
