favicon, image, text

--- a/index.html
+++ b/index.html
@@ -49,21 +49,21 @@
 
 		<div class="row text-center">
 			<div class="col-md-4">
-			<img class="img-responsive featured-image rounded-corners" src="img/flashcards.jpg" alt="flashcard image">
-			<h2>Flashcard App</h2>
-			<p><a class="link" href="http://renniesb.github.io/languagesite/Flashcards.html">http://renniesb.github.io/languagesite/Flashcards.html</a></p>
+				<img class="img-responsive rounded-corners" src="img/flashcards.jpg" alt="flashcard image">
+				<h2>Flashcard App</h2>
+				<p><a class="link" href="http://renniesb.github.io/languagesite/Flashcards.html">http://renniesb.github.io/languagesite/Flashcards.html</a></p>
 			</div>
 
 			<div class="col-md-4">
-			<img class="img-responsive featured-image rounded-corners" src="img/drag-and-drop.jpg" alt="drag and drop image">
-			<h2>Drag and Drop App</h2>
-			<p><a class="link" href="http://renniesb.github.io/languagesite/materialsDragAndDrop/draganddrop.html">http://renniesb.github.io/languagesite/materialsDragAndDrop/draganddrop.html</a></p>
+				<img class="img-responsive rounded-corners" src="img/drag-and-drop.jpg" alt="drag and drop image">
+				<h2>Drag and Drop App</h2>
+				<p><a class="link" href="http://renniesb.github.io/languagesite/materialsDragAndDrop/draganddrop.html">http://renniesb.github.io/languagesite/materialsDragAndDrop/draganddrop.html</a></p>
 			</div>
 
 			<div class="col-md-4">
-			<img class="img-responsive featured-image rounded-corners" src="img/science.jpg" alt="science blog image">
-			<h2>Science Blog</h2>
-			<p><a class="link" href="http://sciencesanjosesg.blogspot.com.es/">http://sciencesanjosesg.blogspot.com.es/</a></p>
+				<img class="img-responsive featured-image rounded-corners" src="img/science.jpg" alt="science blog image">
+				<h2>Science Blog</h2>
+				<p><a class="link" href="http://sciencesanjosesg.blogspot.com.es/">http://sciencesanjosesg.blogspot.com.es/</a></p>
 			</div>
 
 		</div>
