deleted extra body tag and repeat ids

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 			<div class="col-md-6 text-right text-uppercase">
 				<h1 class="title title-super">Rennie Bevineau</h1>	
-				<h4>Front-End Developer</h4>			
+				<h4>Front-End Web Developer</h4>			
 			</div>
 		</div>
 		
@@ -79,10 +79,10 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h4 class="modal-title" id="myModalLabel">Flashcard App</h4>
+        <h4 class="modal-title" id="myModalLabel1">Flashcard App</h4>
       </div>
       <div class="modal-body">
-        <img class="img-responsive" src="img/flashcards.jpg">
+        <img class="img-responsive" src="img/flashcards.jpg" alt="flashcard image">
         <br>
         This is an app designed to learn basic spanish words, first you see the word in English and when you click the forward arrow you can see the equivalent word in spanish.
       </div>
@@ -100,10 +100,10 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h4 class="modal-title" id="myModalLabel">Drag and Drop App</h4>
+        <h4 class="modal-title" id="myModalLabel2">Drag and Drop App</h4>
       </div>
       <div class="modal-body">
-        <img class="img-responsive" src="img/drag-and-drop.jpg">
+        <img class="img-responsive" src="img/drag-and-drop.jpg" alt="Drag and Drop image">
         <br>
         This app is designed to test the difference between manufactured goods and raw materials through a drag and drop game.The user must place the different objects in their correct category.
       </div>
@@ -119,10 +119,10 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h4 class="modal-title" id="myModalLabel">Science Blog</h4>
+        <h4 class="modal-title" id="myModalLabel3">Science Blog</h4>
       </div>
       <div class="modal-body">
-        <img class="img-responsive" src="img/science.jpg">
+        <img class="img-responsive" src="img/science.jpg" alt="science blog image">
         <br>
         This is a blog that uses videos, games and other resources to teach science topics to children.
       </div>
@@ -135,5 +135,4 @@
 	
 </body>
 	
-</body>
 </html>
