--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 			<div class="col-md-6 text-right text-uppercase">
 				<h1 class="title title-super">Rennie Bevineau</h1>	
-				<h4>Front-End Web Developer</h4>			
+				<h4 class="subtitle">Front-End Web Developer</h4>			
 			</div>
 		</div>
 		
@@ -45,7 +45,7 @@
 		<div class="row">
 			
 			<div class="col-md-12">
-				<h2 class="subtitle1">Featured Work</h2>
+				<h2 class="title2">Featured Work</h2>
 			</div>
 		</div>
 
