added new image

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <h4 class="modal-title" id="myModalLabel2">Drag and Drop App</h4>
       </div>
       <div class="modal-body">
-        <img class="img-responsive" src="img/drag-and-drop.jpg" alt="Drag and Drop image">
+        <img class="img-responsive" src="img/drag-and-drop2.jpg" alt="Drag and Drop image">
         <br>
         This app is designed to test the difference between manufactured goods and raw materials through a drag and drop game.The user must place the different objects in their correct category.
       </div>
