scientist alt text changes

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         <h4 class="modal-title" id="myModalLabel3">Science Blog</h4>
       </div>
       <div class="modal-body">
-        <img class="img-responsive" src="img/scientist.png" alt="science blog image">
+        <img class="img-responsive" src="img/scientist.png" alt="scientist image">
         <br>
         This is a blog that uses videos, games and other resources to teach science topics to children.
       </div>
