--- a/index.html
+++ b/index.html
@@ -51,6 +51,27 @@
 
 		<div class="row text-center">
 			<div class="col-md-4">
+				<img class="img-responsive featured-image rounded-corners"  src="img/restaurant-explorer.jpg" alt="restaurant explorer project image">
+				<h2>Restaurant Explorer App</h2>
+				<p><a class="link" href="http://renniesb.github.io/neighborhood-explorer/index.html">http://renniesb.github.io/neighborhood-explorer</a></p>
+			</div>
+
+			<div class="col-md-4">
+				<img class="img-responsive featured-image rounded-corners" src="img/froggerclone.jpg" alt="frogger game image">
+				<h2>Frogger game</h2>
+				<p><a class="link" href="http://renniesb.github.io/frontend-nanodegree-arcade-game/">http://renniesb.github.io/frontend-nanodegree-arcade-game/</a></p>
+			</div>
+
+			<div class="col-md-4">
+				<img class="img-responsive featured-image" src="img/developer.jpg"  alt="resume app image">
+				<h2>Resume App</h2>
+				<p><a class="link" href="http://renniesb.github.io/frontend-nanodegree-resume/">http://renniesb.github.io/frontend-nanodegree-resume/</a></p>
+			</div>
+			
+		</div>
+
+		<div class="row text-center">
+			<div class="col-md-4">
 				<img class="img-responsive featured-image rounded-corners"  src="img/flashcards.jpg" alt="flashcard image" data-toggle="modal" data-target="#project1"  onmouseover="this.src='img/flashcards-text.jpg'" onmouseout="this.src='img/flashcards.jpg'">
 				<h2>Flashcard App</h2>
 				<p><a class="link" href="http://renniesb.github.io/languagesite/Flashcards.html">http://renniesb.github.io/languagesite/Flashcards.html</a></p>
@@ -67,7 +88,14 @@
 				<h2>Science Blog</h2>
 				<p><a class="link" href="http://sciencesanjosesg.blogspot.com.es/">http://sciencesanjosesg.blogspot.com.es/</a></p>
 			</div>
-
+			
+		</div>
+		<div class="row text-center">
+			<div class="col-md-4">
+				<img class="img-responsive featured-image rounded-corners"  src="img/pagespeed.jpg" alt="website optimization image" >
+				<h2>Website Optimization- Page Speed and Efficiency</h2>
+				<p><a class="link" href="http://renniesb.github.io/frontend-nanodegree-mobile-portfolio/">http://renniesb.github.io/frontend-nanodegree-mobile-portfolio/</a></p>
+			</div>
 		</div>
 
 	</div>
