correct image urls

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
 		<div class="row text-center">
 			<div class="col-md-4">
-				<img class="img-responsive featured-image rounded-corners"  src="img/restaurant-explorer.jpg" alt="restaurant explorer project image"  data-toggle="modal" data-target="#project5" >
+				<img class="img-responsive featured-image rounded-corners"  src="img/restaurantexplorer.jpg" alt="restaurant explorer project image"  data-toggle="modal" data-target="#project5" >
 				<h4>Click photo for more info</h4>
 				<h2 class="space">Restaurant Explorer App</h2>
 				
@@ -59,7 +59,7 @@
 			</div>
 
 			<div class="col-md-4">
-				<img class="img-responsive featured-image rounded-corners" src="img/froggerclone.jpg" alt="frogger Game image"  data-toggle="modal" data-target="#project6" >
+				<img class="img-responsive featured-image rounded-corners" src="img/frogger.jpg" alt="frogger Game image"  data-toggle="modal" data-target="#project6" >
 				<h4>Click photo for more info</h4>
 				<h2 class="space">Frogger Game</h2>				
 				<p><a class="link" href="http://renniesb.github.io/frontend-nanodegree-arcade-game/">link: http://renniesb.github.io/frontend-nanodegree-arcade-game/</a></p>
