--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 			</div>
 
 			<div class="col-md-4">
-				<img class="img-responsive featured-image rounded-corners" src="img/developer.jpg"  alt="resume app image" data-toggle="modal" data-target="#project7" >
+				<img class="img-responsive featured-image rounded-corners" src="img/resume.jpg"  alt="resume app image" data-toggle="modal" data-target="#project7" >
 				<h4>Click photo for more info</h4>
 				<h2 class="space">Resume App</h2>				
 				<p><a class="link" href="http://renniesb.github.io/frontend-nanodegree-resume/">link: http://renniesb.github.io/frontend-nanodegree-resume/</a></p>
