--- a/contact.html
+++ b/contact.html
@@ -58,7 +58,7 @@
 	<div class="container" id="main">
 		<div class="row">
 			<div class="col-sm-4">
-				<h2>Contact Rennie</h2>
+				<h2>Contact Information</h2>
 				<p><strong>Email:</strong> rsbevineau@gmail.com</p>
 				<p><strong>Skype:</strong> rsb2333</p>
 				<p><strong>Telephone:</strong> +1 720-209-4335</p>
