--- a/contact.html
+++ b/contact.html
@@ -43,12 +43,9 @@
 		<div class="container">
 			<div class="row">
 
-				<div class="col-sm-1">
+				<div class="col-sm-12">
 					<img class="title-logo" src="img/mouse_logo.jpg"  alt="my logo image">
-				</div>
-
-				<div class="col-sm-11">
-					<h2 class="title"><strong>Contact</strong></h3>
+					<h2><strong>Contact</strong></h2>
 				</div>
 			</div> <!-- end of row -->
 		</div> <!-- end of container -->
