change styling of header

--- a/about.html
+++ b/about.html
@@ -43,11 +43,11 @@
 		<div class="container">
 			<div class="row">
 
-				<div class="col-sm-1">
-					<img class="title-logo" src="img/mouse_logo.jpg"  alt="my logo image">
+				<div class="col-xs-4 col-sm-2 col-lg-1">
+					<img class="title-logo img-responsive" src="img/mouse_logo.jpg"  alt="my logo image">
 				</div>
 
-				<div class="col-sm-11">
+				<div class=" col xs-8 col-sm-10 col-lg-11">
 					<h3 class="title"><strong>About Rennie Bevineau</strong></h3>
 					<h4 class="subtitle">Front-End Web Developer</h4>
 				</div>
