--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Portfolio Page</title>
-	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
-	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
-	<link href='http://fonts.googleapis.com/css?family=Lato:100,300' rel='stylesheet' type='text/css'>
-	<link href='http://fonts.googleapis.com/css?family=Cinzel:900' rel='stylesheet' type='text/css'>
+	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+	<link href="http://fonts.googleapis.com/css?family=Lato:100,300" rel="stylesheet" type="text/css">
+	<link href="http://fonts.googleapis.com/css?family=Cinzel:900" rel="stylesheet" type="text/css">
 	<link rel="stylesheet" href="css/main.css">
 	<script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
 	<script type="text/javascript" src="js/bootstrap.min.js"></script>
@@ -17,11 +17,11 @@
 	<div class="container">
 		<div class="row">
 
-			<div class="col-md-6">
-				<img class="title-logo" src="img/mouse_logo.jpg"  alt="my logo image">
+			<div class="col-xs-6">
+				<img class="title-logo" src="img/mouse_logo.jpg" alt="my logo image" srcset="img/mouse_logo-small.jpg 320w, img/mouse_logo-medium.jpg 640w, img/mouse_logo-large.jpg 1024w" sizes="(min-width: 300px) 50vw, (min-width: 700px) 70vw, 100vw">
 			</div>
 
-			<div class="col-md-6 text-right text-uppercase">
+			<div class="col-xs-6 text-right text-uppercase">
 				<h1 class="title title-super">Rennie Bevineau</h1>
 				<h4 class="subtitle">Front-End Web Developer</h4>
 			</div>
@@ -29,7 +29,7 @@
 
 		<div class="row">
 
-			<div class="col-md-12">
+			<div class="col-xs-12">
 				<hr class="rounded-corners">
 			</div>
 		</div>
@@ -37,8 +37,8 @@
 
 		<div class="row">
 
-			<div class="col-md-12">
-				<img class="img-responsive rounded-corners" src="img/guell.jpg" alt="guell park image">
+			<div class="col-xs-12">
+				<img class="img-responsive rounded-corners" src="img/guell.jpg" alt="guell park image" srcset="img/guell-small.jpg 320w, img/guell-medium.jpg 640w, img/guell-large.jpg 1024w" sizes="(min-width: 300px) 50vw, (min-width: 700px) 70vw, 100vw">
 			</div>
 		</div>
 
@@ -50,23 +50,23 @@
 		</div>
 
 		<div class="row text-center">
-			<div class="col-md-4">
-				<img class="img-responsive featured-image rounded-corners"  src="img/restaurantexplorer.jpg" alt="restaurant explorer project image"  data-toggle="modal" data-target="#project5" >
+			<div class="col-sm-4">
+				<img class="img-responsive featured-image rounded-corners" src="img/restaurantexplorer.jpg" alt="restaurant explorer project image" data-toggle="modal" data-target="#project5" srcset="img/restaurantexplorer-small.jpg 320w, img/restaurantexplorer-medium.jpg 640w, img/restaurantexplorer-large.jpg 1024w" sizes="(min-width: 300px) 50vw, (min-width: 700px) 70vw, 100vw">
 				<h4>Click photo for more info</h4>
 				<h2 class="space">Restaurant Explorer App</h2>
 
 				<p><a class="link" href="http://renniesb.github.io/neighborhood-explorer/index.html">link: http://renniesb.github.io/neighborhood-explorer</a></p>
 			</div>
 
-			<div class="col-md-4">
-				<img class="img-responsive featured-image rounded-corners" src="img/frogger.jpg" alt="frogger Game image"  data-toggle="modal" data-target="#project6" >
+			<div class="col-sm-4">
+				<img class="img-responsive featured-image rounded-corners" src="img/frogger.jpg" alt="frogger Game image" data-toggle="modal" data-target="#project6" srcset="img/frogger-small.jpg 320w, img/frogger-medium.jpg 640w, img/frogger-large.jpg 1024w" sizes="(min-width: 300px) 50vw, (min-width: 700px) 70vw, 100vw">
 				<h4>Click photo for more info</h4>
 				<h2 class="space">Frogger Game</h2>
 				<p><a class="link" href="http://renniesb.github.io/frontend-nanodegree-arcade-game/">link: http://renniesb.github.io/frontend-nanodegree-arcade-game/</a></p>
 			</div>
 
-			<div class="col-md-4">
-				<img class="img-responsive featured-image rounded-corners" src="img/resume.jpg"  alt="resume app image" data-toggle="modal" data-target="#project7" >
+			<div class="col-sm-4">
+				<img class="img-responsive featured-image rounded-corners" src="img/resume.jpg" alt="resume app image" data-toggle="modal" data-target="#project7" srcset="img/resume-small.jpg 320w, img/resume-medium.jpg 640w, img/resume-large.jpg 1024w" sizes="(min-width: 300px) 50vw, (min-width: 700px) 70vw, 100vw">
 				<h4>Click photo for more info</h4>
 				<h2 class="space">Resume App</h2>
 				<p><a class="link" href="http://renniesb.github.io/frontend-nanodegree-resume/">link: http://renniesb.github.io/frontend-nanodegree-resume/</a></p>
@@ -75,23 +75,23 @@
 		</div>
 
 		<div class="row text-center">
-			<div class="col-md-4">
-				<img class="img-responsive featured-image rounded-corners"  src="img/flashcards.jpg" alt="flashcard image" data-toggle="modal" data-target="#project1">
+			<div class="col-sm-4">
+				<img class="img-responsive featured-image rounded-corners" src="img/flashcards.jpg" alt="flashcard image" data-toggle="modal" data-target="#project1" srcset="img/flashcards-small.jpg 320w, img/flashcards-medium.jpg 640w, img/flashcards-large.jpg 1024w" sizes="(min-width: 300px) 50vw, (min-width: 700px) 70vw, 100vw">
 				<h4>Click photo for more info</h4>
 				<h2 class="space">Flashcard App</h2>
 				<p><a class="link" href="http://renniesb.github.io/languagesite/Flashcards.html">link: http://renniesb.github.io/languagesite/Flashcards.html</a></p>
 			</div>
 
-			<div class="col-md-4">
-				<img class="img-responsive featured-image rounded-corners" src="img/drag-and-drop.jpg" alt="drag and drop image" data-toggle="modal" data-target="#project2">
+			<div class="col-sm-4">
+				<img class="img-responsive featured-image rounded-corners" src="img/drag-and-drop.jpg" alt="drag and drop image" data-toggle="modal" data-target="#project2" srcset="img/drag-and-drop-small.jpg 320w, img/drag-and-drop-medium.jpg 640w, img/drag-and-drop-large.jpg 1024w" sizes="(min-width: 300px) 50vw, (min-width: 700px) 70vw, 100vw">
 				<h4>Click photo for more info</h4>
 				<h2 class="space">Drag and Drop App</h2>
 
 				<p><a class="link" href="http://renniesb.github.io/languagesite/materialsDragAndDrop/draganddrop.html">link: http://renniesb.github.io/languagesite/materialsDragAndDrop/draganddrop.html</a></p>
 			</div>
 
-			<div class="col-md-4">
-				<img class="img-responsive featured-image" src="img/science.jpg"  alt="science blog image" data-toggle="modal" data-target="#project3">
+			<div class="col-sm-4">
+				<img class="img-responsive featured-image" src="img/science.jpg" alt="science blog image" data-toggle="modal" data-target="#project3" srcset="img/science-small.jpg 320w, img/science-medium.jpg 640w, img/science-large.jpg 1024w" sizes="(min-width: 300px) 50vw, (min-width: 700px) 70vw, 100vw">
 				<h4>Click photo for more info</h4>
 				<h2 class="space">Science Blog</h2>
 
@@ -100,8 +100,8 @@
 
 		</div>
 		<div class="row text-center">
-			<div class="col-md-4">
-				<img class="img-responsive featured-image rounded-corners"  src="img/pagespeed.jpg" alt="website optimization image"  data-toggle="modal" data-target="#project4" >
+			<div class="col-sm-4">
+				<img class="img-responsive featured-image rounded-corners" src="img/pagespeed.jpg" alt="website optimization image" data-toggle="modal" data-target="#project4" srcset="img/pagespeed-small.jpg 320w, img/pagespeed-medium.jpg 640w, img/pagespeed-large.jpg 1024w" sizes="(min-width: 300px) 50vw, (min-width: 700px) 70vw, 100vw">
 				<h4>Click photo for more info</h4>
 				<h2 class="space">Website Optimization- Page Speed and Efficiency</h2>
 
@@ -142,7 +142,7 @@
         <h4 class="modal-title" id="myModalLabel2">Drag and Drop App</h4>
       </div>
       <div class="modal-body">
-        <img class="img-responsive" src="img/drag-and-drop2.jpg" alt="Drag and Drop image">
+        <img class="img-responsive" src="img/drag-and-drop2.jpg" alt="Drag and Drop image" srcset="img/drag-and-drop2-small.jpg 320w, img/drag-and-drop2-medium.jpg 640w, img/drag-and-drop2-large.jpg 1024w" sizes="(min-width: 300px) 50vw, (min-width: 700px) 70vw, 100vw">
         <br>
         This app is designed to test the difference between manufactured goods and raw materials through a drag and drop game.The user must place the different objects in their correct category.
       </div>
@@ -184,7 +184,7 @@
       <div class="modal-body">
 
         <br>
-        This project centers around optimizing a website for performance and speed. I utilized Google's pagespeed insights in order to pinpoint areas for performance optimization. I then used the necessary tools and techniques in order to optimize the website.
+        This project centers around optimizing a website for performance and speed. I utilized Google&apos;s pagespeed insights in order to pinpoint areas for performance optimization. I then used the necessary tools and techniques in order to optimize the website.
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -204,7 +204,7 @@
       <div class="modal-body">
 
         <br>
-        This is an app designed to search and filter restaurants in the Broomfield-Colorado area and provide detailed information about the restaurants. It utilizes api's to pull in the map and restaurant info and the javascript framework of knockout.js to accomplish tasks such as filtering the restaurants and creating the markers.
+        This is an app designed to search and filter restaurants in the Broomfield-Colorado area and provide detailed information about the restaurants. It utilizes api&apos;s to pull in the map and restaurant info and the javascript framework of knockout.js to accomplish tasks such as filtering the restaurants and creating the markers.
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -254,14 +254,14 @@
   </div>
 </div>
 
-</body>
 
-</body>
 
-</body>
 
-</body>
 
-</body>
+
+
+
+
+
 
 </html>
