--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<div class="row">
 
 			<div class="col-xs-6">
-				<img class="title-logo" src="img/mouse_logo.jpg" alt="my logo image" srcset="img/mouse_logo-small.jpg 320w, img/mouse_logo-medium.jpg 640w, img/mouse_logo-large.jpg 1024w" sizes="(min-width: 300px) 50vw, (min-width: 700px) 70vw, 100vw">
+				<img class="title-logo" src="img/mouse_logo-large.jpg" alt="my logo image" srcset="img/mouse_logo-small.jpg 320w, img/mouse_logo-medium.jpg 640w, img/mouse_logo-large.jpg 1024w" sizes="(min-width: 300px) 50vw, (min-width: 700px) 70vw, 100vw">
 			</div>
 
 			<div class="col-xs-6 text-right text-uppercase">
@@ -38,7 +38,7 @@
 		<div class="row">
 
 			<div class="col-xs-12">
-				<img class="img-responsive rounded-corners" src="img/guell.jpg" alt="guell park image" srcset="img/guell-small.jpg 320w, img/guell-medium.jpg 640w, img/guell-large.jpg 1024w" sizes="(min-width: 300px) 50vw, (min-width: 700px) 70vw, 100vw">
+				<img class="center-block img-responsive rounded-corners" src="img/guell-large.jpg" alt="guell park image" srcset="img/guell-small.jpg 320w, img/guell-medium.jpg 640w, img/guell-large.jpg 1024w" sizes="(min-width: 300px) 50vw, (min-width: 700px) 70vw, 100vw">
 			</div>
 		</div>
 
@@ -51,7 +51,7 @@
 
 		<div class="row text-center">
 			<div class="col-sm-4">
-				<img class="img-responsive featured-image rounded-corners" src="img/restaurantexplorer.jpg" alt="restaurant explorer project image" data-toggle="modal" data-target="#project5" srcset="img/restaurantexplorer-small.jpg 320w, img/restaurantexplorer-medium.jpg 640w, img/restaurantexplorer-large.jpg 1024w" sizes="(min-width: 300px) 50vw, (min-width: 700px) 70vw, 100vw">
+				<img class="center-block img-responsive featured-image rounded-corners" src="img/restaurantexplorer-large.jpg" alt="restaurant explorer project image" data-toggle="modal" data-target="#project5" srcset="img/restaurantexplorer-small.jpg 320w, img/restaurantexplorer-medium.jpg 640w, img/restaurantexplorer-large.jpg 1024w" sizes="(min-width: 300px) 50vw, (min-width: 700px) 70vw, 100vw">
 				<h4>Click photo for more info</h4>
 				<h2 class="space">Restaurant Explorer App</h2>
 
@@ -59,14 +59,14 @@
 			</div>
 
 			<div class="col-sm-4">
-				<img class="img-responsive featured-image rounded-corners" src="img/frogger.jpg" alt="frogger Game image" data-toggle="modal" data-target="#project6" srcset="img/frogger-small.jpg 320w, img/frogger-medium.jpg 640w, img/frogger-large.jpg 1024w" sizes="(min-width: 300px) 50vw, (min-width: 700px) 70vw, 100vw">
+				<img class="center-block img-responsive featured-image rounded-corners" src="img/frogger-large.jpg" alt="frogger Game image" data-toggle="modal" data-target="#project6" srcset="img/frogger-small.jpg 320w, img/frogger-medium.jpg 640w, img/frogger-large.jpg 1024w" sizes="(min-width: 300px) 50vw, (min-width: 700px) 70vw, 100vw">
 				<h4>Click photo for more info</h4>
 				<h2 class="space">Frogger Game</h2>
 				<p><a class="link" href="http://renniesb.github.io/frontend-nanodegree-arcade-game/">link: http://renniesb.github.io/frontend-nanodegree-arcade-game/</a></p>
 			</div>
 
 			<div class="col-sm-4">
-				<img class="img-responsive featured-image rounded-corners" src="img/resume.jpg" alt="resume app image" data-toggle="modal" data-target="#project7" srcset="img/resume-small.jpg 320w, img/resume-medium.jpg 640w, img/resume-large.jpg 1024w" sizes="(min-width: 300px) 50vw, (min-width: 700px) 70vw, 100vw">
+				<img class="center-block img-responsive featured-image rounded-corners" src="img/resume-large.jpg" alt="resume app image" data-toggle="modal" data-target="#project7" srcset="img/resume-small.jpg 320w, img/resume-medium.jpg 640w, img/resume-large.jpg 1024w" sizes="(min-width: 300px) 50vw, (min-width: 700px) 70vw, 100vw">
 				<h4>Click photo for more info</h4>
 				<h2 class="space">Resume App</h2>
 				<p><a class="link" href="http://renniesb.github.io/frontend-nanodegree-resume/">link: http://renniesb.github.io/frontend-nanodegree-resume/</a></p>
@@ -76,14 +76,14 @@
 
 		<div class="row text-center">
 			<div class="col-sm-4">
-				<img class="img-responsive featured-image rounded-corners" src="img/flashcards.jpg" alt="flashcard image" data-toggle="modal" data-target="#project1" srcset="img/flashcards-small.jpg 320w, img/flashcards-medium.jpg 640w, img/flashcards-large.jpg 1024w" sizes="(min-width: 300px) 50vw, (min-width: 700px) 70vw, 100vw">
+				<img class="center-block img-responsive featured-image rounded-corners" src="img/flashcards-large.jpg" alt="flashcard image" data-toggle="modal" data-target="#project1" srcset="img/flashcards-small.jpg 320w, img/flashcards-medium.jpg 640w, img/flashcards-large.jpg 1024w" sizes="(min-width: 300px) 50vw, (min-width: 700px) 70vw, 100vw">
 				<h4>Click photo for more info</h4>
 				<h2 class="space">Flashcard App</h2>
 				<p><a class="link" href="http://renniesb.github.io/languagesite/Flashcards.html">link: http://renniesb.github.io/languagesite/Flashcards.html</a></p>
 			</div>
 
 			<div class="col-sm-4">
-				<img class="img-responsive featured-image rounded-corners" src="img/drag-and-drop.jpg" alt="drag and drop image" data-toggle="modal" data-target="#project2" srcset="img/drag-and-drop-small.jpg 320w, img/drag-and-drop-medium.jpg 640w, img/drag-and-drop-large.jpg 1024w" sizes="(min-width: 300px) 50vw, (min-width: 700px) 70vw, 100vw">
+				<img class="center-block img-responsive featured-image rounded-corners" src="img/drag-and-drop-large.jpg" alt="drag and drop image" data-toggle="modal" data-target="#project2" srcset="img/drag-and-drop-small.jpg 320w, img/drag-and-drop-medium.jpg 640w, img/drag-and-drop-large.jpg 1024w" sizes="(min-width: 300px) 50vw, (min-width: 700px) 70vw, 100vw">
 				<h4>Click photo for more info</h4>
 				<h2 class="space">Drag and Drop App</h2>
 
@@ -91,7 +91,7 @@
 			</div>
 
 			<div class="col-sm-4">
-				<img class="img-responsive featured-image" src="img/science.jpg" alt="science blog image" data-toggle="modal" data-target="#project3" srcset="img/science-small.jpg 320w, img/science-medium.jpg 640w, img/science-large.jpg 1024w" sizes="(min-width: 300px) 50vw, (min-width: 700px) 70vw, 100vw">
+				<img class="center-block img-responsive featured-image" src="img/science-large.jpg" alt="science blog image" data-toggle="modal" data-target="#project3" srcset="img/science-small.jpg 320w, img/science-medium.jpg 640w, img/science-large.jpg 1024w" sizes="(min-width: 300px) 50vw, (min-width: 700px) 70vw, 100vw">
 				<h4>Click photo for more info</h4>
 				<h2 class="space">Science Blog</h2>
 
@@ -101,7 +101,7 @@
 		</div>
 		<div class="row text-center">
 			<div class="col-sm-4">
-				<img class="img-responsive featured-image rounded-corners" src="img/pagespeed.jpg" alt="website optimization image" data-toggle="modal" data-target="#project4" srcset="img/pagespeed-small.jpg 320w, img/pagespeed-medium.jpg 640w, img/pagespeed-large.jpg 1024w" sizes="(min-width: 300px) 50vw, (min-width: 700px) 70vw, 100vw">
+				<img class="center-block img-responsive featured-image rounded-corners" src="img/pagespeed-large.jpg" alt="website optimization image" data-toggle="modal" data-target="#project4" srcset="img/pagespeed-small.jpg 320w, img/pagespeed-medium.jpg 640w, img/pagespeed-large.jpg 1024w" sizes="(min-width: 300px) 50vw, (min-width: 700px) 70vw, 100vw">
 				<h4>Click photo for more info</h4>
 				<h2 class="space">Website Optimization- Page Speed and Efficiency</h2>
 
@@ -142,7 +142,7 @@
         <h4 class="modal-title" id="myModalLabel2">Drag and Drop App</h4>
       </div>
       <div class="modal-body">
-        <img class="img-responsive" src="img/drag-and-drop2.jpg" alt="Drag and Drop image" srcset="img/drag-and-drop2-small.jpg 320w, img/drag-and-drop2-medium.jpg 640w, img/drag-and-drop2-large.jpg 1024w" sizes="(min-width: 300px) 50vw, (min-width: 700px) 70vw, 100vw">
+        <img class="img-responsive" src="img/drag-and-drop2-large.jpg" alt="Drag and Drop image" srcset="img/drag-and-drop2-small.jpg 320w, img/drag-and-drop2-medium.jpg 640w, img/drag-and-drop2-large.jpg 1024w" sizes="(min-width: 300px) 50vw, (min-width: 700px) 70vw, 100vw">
         <br>
         This app is designed to test the difference between manufactured goods and raw materials through a drag and drop game.The user must place the different objects in their correct category.
       </div>
@@ -253,15 +253,5 @@
     </div>
   </div>
 </div>
-
-
-
-
-
-
-
-
-
-
 
 </html>
